--- a/Camagru_CSS.css
+++ b/Camagru_CSS.css
@@ -74,7 +74,7 @@ a {
     display: inline-block;
         }
 
-.id_form{
+.prev_pic{
     display: inline-block;
 }
 
@@ -131,4 +131,9 @@ a {
     padding: 0;
 */
 
+}
+
+#user_pic{
+    margin-right: 8px;
+    margin-left: 8px;
 }
