--- a/Camagru_CSS.css
+++ b/Camagru_CSS.css
@@ -49,9 +49,12 @@ a {
 }
 
 #prec_page a{
+    cursor: auto;
     color: blue;
     font-size: small;
     text-align: left;
+    text-decoration: underline;
+    
 }
 
 #img_gallery{
