correct qq bugs

--- a/Camagru_CSS.css
+++ b/Camagru_CSS.css
@@ -178,3 +178,10 @@ a {
     border-width: 2px;
     border-radius: 12px;
 }
+
+
+table {
+    margin-right: auto;
+    margin-left: auto;
+    font-family: monospace;
+}
