im_admin --> uniq pages for each table + limit 10 DESC for display table in im_admin.php

--- a/Camagru_CSS.css
+++ b/Camagru_CSS.css
@@ -54,8 +54,13 @@ a {
     font-size: small;
     text-align: left;
     text-decoration: underline;
-    display: inline-block;
-    
+    display: inline-block;    
+}
+
+#a_align_right a{
+    color: blue;
+    font-size: small;
+    text-align: right;
 }
 
 #img_gallery{
