--- a/Tests/index.css
+++ b/Tests/index.css
@@ -22,8 +22,8 @@
     display: inline-block;
 /*    margin: 20px 10px 10px 20px;*/
 /*    padding-top: 20px;*/
-    width: 80px;
-    height: 60px;
+/*    width: 80px;*/
+/*    height: 60px;*/
     color: #3D110F;
     background-color: #822520;
     border: 4px solid #3D110F;
