--- a/Camagru_CSS.css
+++ b/Camagru_CSS.css
@@ -235,3 +235,9 @@ table {
     border-color: gainsboro;
 }
 
+.pres_pic pre{
+/*    display: inline-block;*/
+    margin: 0;
+    font-size: smaller;
+}
+
